<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/fondo"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E91E63"
            android:gravity="center"
            android:text="@string/textView"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textView2"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/unjugador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:background="#E91E63"
                android:onClick="Jugar"
                android:text="@string/unjugador"
                android:textSize="12sp"
                app:backgroundTint="#E91E63" />

            <EditText
                android:id="@+id/txtJugador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/txtJugador"
                android:inputType="textPersonName"
                android:textColorHint="#818181"
                android:textSize="12sp" />

            <Button
                android:id="@+id/dosjugadores"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:background="#E91E63"
                android:text="@string/dosjugadores"
                android:textSize="12sp"
                app:backgroundTint="#E91E63" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/txtJugador1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="2"
                    android:hint="@string/txtJugador1"
                    android:inputType="textPersonName"
                    android:textColorHint="#818181"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/txtJugador2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="2"
                    android:hint="@string/txtJugador2"
                    android:inputType="textPersonName"
                    android:textColorHint="#818181"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/textView3"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <RadioGroup
            android:id="@+id/grupoDificultad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rFacil"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rFacil"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rFacil"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rDificil"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rDifícil"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rExtremo"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rExtremo"
                android:textSize="12sp" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/partidas"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#E91E63"
                android:onClick="irPartidas"
                android:padding="5dp"
                android:text="@string/partidas"
                android:textSize="12sp"
                app:backgroundTint="#E91E63" />

            <Button
                android:id="@+id/ranking"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#E91E63"
                android:onClick="irRanking"
                android:padding="5dp"
                android:text="@string/ranking"
                android:textSize="12sp"
                app:backgroundTint="#E91E63" />

            <Button
                android:id="@+id/mute"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="#E91E63"
                android:onClick="musicaAmbiente"
                android:padding="5dp"
                android:text="@string/mute"
                android:textSize="12sp"
                app:backgroundTint="#E91E63" />

        </LinearLayout>

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/fondo"
        android:clipToPadding="false">

        <ImageView
            android:id="@+id/a1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            android:padding="5dp"
            android:src="@drawable/casilla"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/a2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            android:padding="5dp"
            android:src="@drawable/casilla"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/a3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            android:padding="5dp"
            android:src="@drawable/casilla"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            android:padding="5dp"
            android:src="@drawable/casilla"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            android:padding="5dp"
            android:src="@drawable/casilla"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/b3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            android:padding="5dp"
            android:src="@drawable/casilla"
            app:layout_column="2"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            android:padding="5dp"
            android:src="@drawable/casilla"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            android:padding="5dp"
            android:src="@drawable/casilla"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <ImageView
            android:id="@+id/c3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="toqueCasilla"
            android:padding="5dp"
            android:src="@drawable/casilla"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>